@@ -1,6 +1,8 @@
 
 * SVN *
 
+* Moved ActionController session key to webistrano_config.rb
+
 * Used template naming conventions of Rails 2.x: Provided by kosmas.schuetz@gmx.com
     *.rhtml => *.html.erb
     *.rjs => *.js.rjs 
